--- a/package.json
+++ b/package.json
@@ -25,12 +25,15 @@
   "dependencies": {
     "@prisma/client": "^6.1.0",
     "@tanstack/react-query": "^5.90.9",
+    "@types/dagre": "^0.7.53",
     "@types/jest": "^30.0.0",
     "@types/multer": "^2.0.0",
+    "@xyflow/react": "^12.9.3",
     "axios": "^1.7.9",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
+    "dagre": "^0.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
