--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.0",
+    "ffmpeg-static": "^5.3.0",
     "framer-motion": "^12.23.24",
     "helmet": "^8.0.0",
     "jest": "^29.7.0",
