chore: usar prisma db push + import workflow no start de producao

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "dev": "concurrently \"npm run client:dev\" \"npm run server:dev\"",
     "kill-ports": "sh -c 'lsof -ti tcp:3001 | xargs kill -9 2>/dev/null || true; lsof -ti tcp:4001 | xargs kill -9 2>/dev/null || true; lsof -ti tcp:4002 | xargs kill -9 2>/dev/null || true; lsof -ti tcp:4007 | xargs kill -9 2>/dev/null || true'",
     "up": "npm run kill-ports && npm run dev",
-    "start": "npx prisma generate && npx prisma migrate deploy && npx tsx api/server.ts",
-    "start:prod": "npx prisma generate && npx prisma migrate deploy && npx tsx api/server.ts",
+    "start": "npm run deploy:prod",
+    "start:prod": "npm run deploy:prod",
+    "deploy:prod": "npx prisma db push && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
     "db:cleanup-clinic": "npx prisma db execute --schema=prisma/schema.prisma --file=prisma/cleanup_clinic.sql",
-    "fix:migrations:clinic": "npm run db:cleanup-clinic && npx prisma migrate resolve --rolled-back 20251115195251_clinic_models && npx prisma migrate deploy",
     "start:dev": "./scripts/start-server.sh",
     "start:win": "scripts\\start-server.bat",
     "start:node": "node scripts/start-server.js",
