feat: adicionar script para atualizar workflow no Railway automaticamente

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
     "migrate:procedures": "tsx scripts/migrate_procedure_general_to_ortopedica.ts",
-    "cleanup:workflows": "tsx scripts/delete_unused_workflows.ts"
+    "cleanup:workflows": "tsx scripts/delete_unused_workflows.ts",
+    "update:workflow:railway": "tsx scripts/update_workflow_railway.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
