fix: ajustar script de sincronização para funcionar em 2 passos (local + railway)

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "migrate:procedures": "tsx scripts/migrate_procedure_general_to_ortopedica.ts",
     "cleanup:workflows": "tsx scripts/delete_unused_workflows.ts",
     "update:workflow:railway": "tsx scripts/update_workflow_railway.ts",
-    "sync:workflow:railway": "tsx scripts/sync_workflow_to_railway.ts"
+    "sync:workflow:railway": "tsx scripts/sync_workflow_to_railway.ts",
+    "sync:workflow:railway:upload": "tsx scripts/sync_workflow_to_railway_upload.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
