--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "cleanup:workflows": "tsx scripts/delete_unused_workflows.ts",
     "update:workflow:railway": "tsx scripts/update_workflow_railway.ts",
     "sync:workflow:railway": "tsx scripts/sync_workflow_to_railway.ts",
-    "sync:workflow:railway:upload": "tsx scripts/sync_workflow_to_railway_upload.ts"
+    "sync:workflow:railway:upload": "tsx scripts/sync_workflow_to_railway_upload.ts",
+    "fix:duplicate-edges": "tsx scripts/fix_duplicate_edges.ts",
+    "check:workflow:railway": "tsx scripts/check_workflow_railway.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
