--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "sync:workflow:railway": "tsx scripts/sync_workflow_to_railway.ts",
     "sync:workflow:railway:upload": "tsx scripts/sync_workflow_to_railway_upload.ts",
     "fix:duplicate-edges": "tsx scripts/fix_duplicate_edges.ts",
-    "check:workflow:railway": "tsx scripts/check_workflow_railway.ts"
+    "check:workflow:railway": "tsx scripts/check_workflow_railway.ts",
+    "fix:patient-found-flow": "tsx scripts/fix_patient_found_flow.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
