--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "check:workflow:railway": "tsx scripts/check_workflow_railway.ts",
     "fix:patient-found-flow": "tsx scripts/fix_patient_found_flow.ts",
     "cleanup:workflows": "tsx scripts/cleanup_old_workflows.ts",
-    "test:gpt-models": "tsx scripts/test_gpt_models.ts"
+    "test:gpt-models": "tsx scripts/test_gpt_models.ts",
+    "seed:procedure-template": "tsx scripts/seed_procedure_template.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
