--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cleanup:workflows": "tsx scripts/cleanup_old_workflows.ts",
     "delete:workflows:except": "tsx scripts/delete_all_workflows_except.ts",
     "delete:workflows:railway": "tsx scripts/delete_workflows_railway.ts",
+    "fix:conversation-channels": "tsx scripts/fix_conversation_channels.ts",
     "test:gpt-models": "tsx scripts/test_gpt_models.ts",
     "seed:procedure-template": "tsx scripts/seed_procedure_template.ts"
   },
