--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "postinstall": "prisma generate",
+    "prebuild": "prisma generate",
     "client:dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -15,7 +17,11 @@
     "up": "npm run kill-ports && npm run dev",
     "start": "npm run deploy:prod",
     "start:prod": "npm run deploy:prod",
-    "deploy:prod": "npx prisma db push && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
+    "deploy:prod": "npx prisma db push --accept-data-loss=false && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
+    "railway:migrate": "npx tsx scripts/railway_migrate_and_seed.ts",
+    "railway:migrate:sql": "npx prisma db execute --file=scripts/railway_migrate.sql",
+    "railway:backup": "npx tsx scripts/railway_backup_before_deploy.ts",
+    "railway:safe-deploy": "bash scripts/railway_safe_deploy.sh",
     "seed:complete": "tsx scripts/seed_complete.ts",
     "db:cleanup-clinic": "npx prisma db execute --schema=prisma/schema.prisma --file=prisma/cleanup_clinic.sql",
     "start:dev": "./scripts/start-server.sh",
