fix: corrigir sistema de inatividade separando sessão de 24h e timeout de 30min
Implementado dois sistemas independentes para controle de conversas:

1. Sistema de Sessão (24 horas):
   - lastUserActivity: rastreia última mensagem do PACIENTE
   - Usado para controle de janela de mensagens WhatsApp
   - Expira 24h após paciente parar de responder
   - Atendente mandar mensagem NÃO renova

2. Sistema de Inatividade (30 minutos):
   - lastAgentActivity: rastreia última ação do ATENDENTE
   - Usado para devolver conversas sem resposta à fila
   - Devolve se paciente aguardando há 30min sem resposta
   - Atualizado via heartbeat (30s) ou ao enviar mensagem

Mudanças técnicas:
- Adicionado campo lastAgentActivity ao modelo Conversation
- Criado migração SQL para adicionar coluna e migrar dados
- Corrigido endpoint /heartbeat para atualizar lastAgentActivity
- Corrigido ação 'take' para atualizar lastAgentActivity
- Corrigido envio de mensagem para atualizar lastAgentActivity
- Refatorado inactivityMonitor para verificar lógica correta:
  * Só devolve se paciente enviou DEPOIS do atendente
  * Só devolve se passaram 30min SEM resposta
- Alterado deploy:prod para usar prisma migrate deploy
- Documentação atualizada

Fixes:
- Conversas antigas não voltam mais imediatamente à fila
- Conversas com atendente visualizando não voltam à fila
- Conversas respondidas não voltam à fila
- Sistema de sessão permanece independente do timeout

--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "up": "npm run kill-ports && npm run dev",
     "start": "npm run deploy:prod",
     "start:prod": "npm run deploy:prod",
-    "deploy:prod": "npx prisma db push --accept-data-loss=false && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
+    "deploy:prod": "npx prisma migrate deploy && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
     "railway:migrate": "npx tsx scripts/railway_migrate_and_seed.ts",
     "railway:migrate:sql": "npx prisma db execute --file=scripts/railway_migrate.sql",
     "railway:backup": "npx tsx scripts/railway_backup_before_deploy.ts",
     "railway:safe-deploy": "bash scripts/railway_safe_deploy.sh",
+    "railway:migrate:check": "npx prisma migrate status",
     "seed:complete": "tsx scripts/seed_complete.ts",
     "db:cleanup-clinic": "npx prisma db execute --schema=prisma/schema.prisma --file=prisma/cleanup_clinic.sql",
     "start:dev": "./scripts/start-server.sh",
