--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "up": "npm run kill-ports && npm run dev",
     "start": "npm run deploy:prod",
     "start:prod": "npm run deploy:prod",
-    "deploy:prod": "npx prisma migrate deploy && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
+    "deploy:prod": "npx tsx scripts/railway_migrate_with_baseline.ts && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
     "railway:migrate": "npx tsx scripts/railway_migrate_and_seed.ts",
     "railway:migrate:sql": "npx prisma db execute --file=scripts/railway_migrate.sql",
     "railway:backup": "npx tsx scripts/railway_backup_before_deploy.ts",
