feat: adicionar script para atualizar preços corretos das clínicas
Criado update_clinic_prices.ts que garante valores corretos:

VIEIRALVES (PARTICULAR):
- Fisio Ortopédica: R$ 90 (pacote 10x: R$ 800)
- Fisio Neurológica: R$ 100 (pacote 10x: R$ 900)
- Fisio Respiratória: R$ 100 (pacote 10x: R$ 900)
- Fisio Pélvica: R$ 220 (pacote 10x: R$ 2.000)
- Acupuntura: R$ 180 (pacote 10x: R$ 1.600)
- RPG: R$ 120 (pacote 10x: R$ 1.000)
- Consulta Ortopedista: R$ 400
- Pilates: R$ 70 (sessão avulsa)
- Quiropraxia: R$ 120

SÃO JOSÉ (PARTICULAR):
- Fisio Ortopédica: R$ 45 (pacote 10x: R$ 200)
- Fisio Neurológica: R$ 60 (pacote 10x: R$ 500)
- Fisio Respiratória: R$ 60 (pacote 10x: R$ 500)
- Fisio Pós-operatória: R$ 60 (pacote 10x: R$ 500)
- Acupuntura: R$ 60 (pacote 10x: R$ 400)
- RPG: R$ 50 (pacote 10x: R$ 350)
- Consulta Ortopédica: R$ 200

Script incluído no deploy:prod para aplicar automaticamente.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "up": "npm run kill-ports && npm run dev",
     "start": "npm run deploy:prod",
     "start:prod": "npm run deploy:prod",
-    "deploy:prod": "npx tsx scripts/railway_migrate_with_baseline.ts && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
+    "deploy:prod": "npx tsx scripts/railway_migrate_with_baseline.ts && npx tsx scripts/railway_migrate_and_seed.ts && npx tsx scripts/seed_complete.ts && npx tsx scripts/update_clinic_prices.ts && npx tsx scripts/import_workflow_definitivo.ts && npx tsx api/server.ts",
     "railway:migrate": "npx tsx scripts/railway_migrate_and_seed.ts",
     "railway:migrate:sql": "npx prisma db execute --file=scripts/railway_migrate.sql",
     "railway:backup": "npx tsx scripts/railway_backup_before_deploy.ts",
@@ -51,7 +51,8 @@
     "seed:procedure-template": "tsx scripts/seed_procedure_template.ts",
     "seed:ai-config": "tsx scripts/seed_ai_configuration.ts",
     "seed:clinic-data": "tsx scripts/seed_clinic_data.ts",
-    "verify:ai-config": "tsx scripts/verify_ai_config.ts"
+    "verify:ai-config": "tsx scripts/verify_ai_config.ts",
+    "update:clinic-prices": "tsx scripts/update_clinic_prices.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.19.0",
